  will trigger one extra query to check if an object is persistent (save() and
  update() do this as well just moments later...).
- Fixed issue #10331: PersistentObject: Exceptions should become more verbose.
  ezcPersistentQueryException now contains the SQL query in its message, if
  appropriate.
- Fixed #010726: Should definition contain type info on primary keys
	
1.3beta1 - Monday 07 May 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed testcase for manual generator giving failure for postgresql on correct
  behaviour (INSERT violating NULL contraint does give an error...).
- Fixed issue #9999: idProperty missing in definition file causes unclear
  error messages.
- Fixed issue #10106: ezcPersistentManualGenerator does not quote ID
  columnName.
- Fixed issue #10112: Lots of failures in PersistentObject tests with
  PostgreSQL.
- Fixed issue #10153: Persistent Object and manual generator (negative and 
  0 primary keys).
- Fixed issue #10369: testAddRelatedBirthdayToPerson3UpdateSuccess fails for
  no apparant reason.
- Implemented feature #8487: An interface for Persistent Objects.
- Implemented feature #10166: Cache PO-definitions.
- Implemented feature #9967: PersistentObject: getRelationQuery() method. This
  method is now called createRelationFindQuery() and is public now.
- Implemented feature #9089: Make some methods public.
  ezcPersistentSession->generateAliasMap() and ->getColumnsFromDefinition()
  are public now.
	
	
1.2 - Monday 18 December 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #9249: Save/update objects with 1:1 relations that share the
  same ID does not work.
- Fixed issue #9489: Check whether the PersistentObject and
  PersistentObjectDatabaseSchemaTiein tutorials are interlinked.
- Fixed issue #9493: Convert < and > in exception messages to ' and ' for
  Cache, ConsoleTools, ImageAnalysis, ImageConversion, PersistentObject,